...
      <TopBar
        LeftComponent={<WidthSpacer width={ICON_SIZE} />}
        RightComponent={<LeaderboardButton onPress={showAllLeaderboards} />}
        height={TOP_BAR_HEIGHT}
        displayLogo
      />
      <Title text="What would you like to train?" />
      <HeightSpacer height="5%" />
      <MenuContainer>
        <AnimatedSequence items={menuItems} />
      </MenuContainer>
    </ScreenContainerPadded>
  );
...
