...
        <FeedbackTextContainer>
          <PopInView
            popToSize={1}
            duration={ANSWER_ANIMATION_START_DELAY_TIME}
            delay={220}
            onAnimationStart={onPraiseAnimationStart}>
            <MediumLargeText testID="definitions-post-game-praise">
              {praise} - {score}/{WORDS_PER_ROUND}
            </MediumLargeText>
          </PopInView>
        </FeedbackTextContainer>
        <ScrollViewContainer>
          <AnswersScrollView
...
