...
      <PostGameContainer>
        <PopInView
          popToSize={1}
          duration={300}
          delay={300}
          onAnimationStart={onPraiseAnimationStart}>
          <PostGameText testID="rhyme-post-game-praise" textAlign="center">
            {scoreText}
          </PostGameText>
        </PopInView>
        <AnswerGrid answers={correctAnswers} postGame />
        <FooterContainer>
          <ScoreChange
...
